--- a/avia/css/avia.css
+++ b/avia/css/avia.css
@@ -240,18 +240,10 @@ align-items: center;
     margin-left: 54px;
 
 }
+/* иblock-item */
 .block-item{
     cursor: pointer;
-    display: inline;
-    list-style-type: none;
-}
-.block-item.active::marker{
-    margin-left: 30px;
-    margin-right: 40px;
-    padding: 5px 7px;
-    background-color: #DD4053;
-    
-    color: blue;
+    margin-right: 26px;
 }
 .block-title{
     position: relative;
@@ -264,14 +256,19 @@ align-items: center;
     font-weight: 500;
     font-size: 22px;
     line-height: 24px;
+    margin-left: 26px;
 }
 .block-title.active{
+    padding: 30px 0;
+    width: 800px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 22px;
+    border-bottom: 0px #D0D0D0 solid;
+    line-height: 24px;
+    margin-left: 26px;
     padding: 15px 0;
-    border-bottom: 0px #ffffff solid;
-}
-
-.block-title.active span {
-    display: block;
 }
 .block-social-icon{
     position: absolute;
@@ -287,9 +284,6 @@ align-items: center;
     padding: 6px 6px;
     background-color: #D0D0D0;
 }
-.number.active{
-    background-color: #DD4053;
-}
 .block-text{
     display: none;
     border-bottom: 1px #D0D0D0 solid;
@@ -300,7 +294,135 @@ align-items: center;
     line-height: 26px;
     padding-bottom: 30px;
 }
+.block-text.active{
+    display: block;
+    border-bottom: 1px #D0D0D0 solid;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 26px;
+    padding-bottom: 30px;
+}
+/* block-item-two */
+.block-item-two{
+    cursor: pointer;
+    margin-right: 26px;
+}
+.block-title-two{
+    position: relative;
+    display: flex;
+    padding: 30px 0;
+    width: 800px;
+    border-bottom: 1px #D0D0D0 solid;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 24px;
+    margin-left: 26px;
+}
+.block-title-two.active{
+    position: relative;
+    padding: 30px 0;
+    width: 800px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 22px;
+    border-bottom: 0px #D0D0D0 solid;
+    line-height: 24px;
+    margin-left: 26px;
+    padding: 15px 0;
+}
+.block-social-icon-two{
+    position: absolute;
+    right: 0;
+}
+.block-social-icon-two.active{
+    fill: #DD4053;
+    transform: rotate(180deg);
+}
+.block-text-two{
+    display: none;
+    border-bottom: 1px #D0D0D0 solid;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 26px;
+    padding-bottom: 30px;
+}
+.block-text-two.active{
+    display: block;
+    border-bottom: 1px #D0D0D0 solid;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 26px;
+    padding-bottom: 30px;
+}
 
+/* block-item-three */
+.block-item-three{
+    cursor: pointer;
+    margin-right: 26px;
+}
+.block-title-three{
+    position: relative;
+    display: flex;
+    padding: 30px 0;
+    width: 800px;
+    border-bottom: 1px #D0D0D0 solid;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 24px;
+    margin-left: 26px;
+}
+.block-title-three.active{
+    position: relative;
+    padding: 30px 0;
+    width: 800px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 22px;
+    border-bottom: 0px #D0D0D0 solid;
+    line-height: 24px;
+    margin-left: 26px;
+    padding: 15px 0;
+}
+.block-social-icon-three{
+    position: absolute;
+    right: 0;
+}
+.block-social-icon-three.active{
+    fill: #DD4053;
+    transform: rotate(180deg);
+}
+.block-text-three{
+    display: none;
+    border-bottom: 1px #D0D0D0 solid;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 26px;
+    padding-bottom: 30px;
+}
+.block-text-three.active{
+    display: block;
+    border-bottom: 1px #D0D0D0 solid;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 26px;
+    padding-bottom: 30px;
+}
 
 /* footer */
 
