--- a/FAQ/style/FAQ.css
+++ b/FAQ/style/FAQ.css
@@ -244,24 +244,10 @@ align-items: center;
    position: relative; 
 }
 /* акардеон 'list' */
-.list{
-    width: 800px;
-    height: 399px;
-    margin-left: 54px;
-    margin-top: 30px;
-}
 .block-item{
     cursor: pointer;
     display: inline;
     list-style-type: none;
-}
-.block-item.active::marker{
-    margin-left: 30px;
-    margin-right: 40px;
-    padding: 5px 7px;
-    background-color: #DD4053;
-    
-    color: blue;
 }
 .block-title{
     position: relative;
@@ -274,14 +260,19 @@ align-items: center;
     font-weight: 500;
     font-size: 22px;
     line-height: 24px;
+    margin-left: 26px;
 }
 .block-title.active{
+    padding: 30px 0;
+    width: 800px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 22px;
+    border-bottom: 0px #D0D0D0 solid;
+    line-height: 24px;
+    margin-left: 26px;
     padding: 15px 0;
-    border-bottom: 0px #ffffff solid;
-}
-
-.block-title.active span {
-    display: block;
 }
 .block-social-icon{
     position: absolute;
@@ -290,15 +281,6 @@ align-items: center;
 .block-social-icon.active{
     fill: #DD4053;
     transform: rotate(180deg);
-}
-.number{
-    margin-left: 30px;
-    margin-right: 40px;
-    padding: 6px 6px;
-    background-color: #D0D0D0;
-}
-.number.active{
-    background-color: #DD4053;
 }
 .block-text{
     display: none;
@@ -310,9 +292,235 @@ align-items: center;
     line-height: 26px;
     padding-bottom: 30px;
 }
+.block-text.active{
+    display: block;
+    border-bottom: 1px #D0D0D0 solid;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 26px;
+    padding-bottom: 30px;
+}
+.number{
+    margin-left: 30px;
+    margin-right: 40px;
+    padding: 6px 6px;
+    background-color: #D0D0D0;
+}
+.number.active{
+    background-color: #DD4053;
+}
 
+/* block-item-two */
+.block-item-two{
+    cursor: pointer;
+    display: inline;
+    list-style-type: none;
+}
+.block-title-two{
+    position: relative;
+    display: flex;
+    padding: 30px 0;
+    width: 800px;
+    border-bottom: 1px #D0D0D0 solid;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 24px;
+    margin-left: 26px;
+}
+.block-title-two.active{
+    position: relative;
+    padding: 30px 0;
+    width: 800px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 22px;
+    border-bottom: 0px #D0D0D0 solid;
+    line-height: 24px;
+    margin-left: 26px;
+    padding: 15px 0;
+}
+.block-social-icon-two{
+    position: absolute;
+    right: 0;
+}
+.block-social-icon-two.active{
+    fill: #DD4053;
+    transform: rotate(180deg);
+}
+.block-text-two{
+    display: none;
+    border-bottom: 1px #D0D0D0 solid;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 26px;
+    padding-bottom: 30px;
+}
+.block-text-two.active{
+    display: block;
+    border-bottom: 1px #D0D0D0 solid;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 26px;
+    padding-bottom: 30px;
+}
+.number-two{
+    margin-left: 30px;
+    margin-right: 40px;
+    padding: 6px 6px;
+    background-color: #D0D0D0;
+}
+.number-two.active{
+    background-color: #DD4053;
+}
 
+/* block-item-three */
+.block-item-three{
+    cursor: pointer;
+    display: inline;
+    list-style-type: none;
+}
+.block-title-three{
+    position: relative;
+    display: flex;
+    padding: 30px 0;
+    width: 800px;
+    border-bottom: 1px #D0D0D0 solid;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 24px;
+    margin-left: 26px;
+}
+.block-title-three.active{
+    position: relative;
+    padding: 30px 0;
+    width: 800px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 22px;
+    border-bottom: 0px #D0D0D0 solid;
+    line-height: 24px;
+    margin-left: 26px;
+    padding: 15px 0;
+}
+.block-social-icon-three{
+    position: absolute;
+    right: 0;
+}
+.block-social-icon-three.active{
+    fill: #DD4053;
+    transform: rotate(180deg);
+}
+.block-text-three{
+    display: none;
+    border-bottom: 1px #D0D0D0 solid;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 26px;
+    padding-bottom: 30px;
+}
+.block-text-three.active{
+    display: block;
+    border-bottom: 1px #D0D0D0 solid;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 26px;
+    padding-bottom: 30px;
+}
+.number-three{
+    margin-left: 30px;
+    margin-right: 40px;
+    padding: 6px 6px;
+    background-color: #D0D0D0;
+}
+.number-three.active{
+    background-color: #DD4053;
+}
 
+/* block-item-four */
+.block-item-four{
+    cursor: pointer;
+    display: inline;
+    list-style-type: none;
+}
+.block-title-four{
+    position: relative;
+    display: flex;
+    padding: 30px 0;
+    width: 800px;
+    border-bottom: 1px #D0D0D0 solid;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 24px;
+    margin-left: 26px;
+}
+.block-title-four.active{
+    position: relative;
+    padding: 30px 0;
+    width: 800px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 22px;
+    border-bottom: 0px #D0D0D0 solid;
+    line-height: 24px;
+    margin-left: 26px;
+    padding: 15px 0;
+}
+.block-social-icon-four{
+    position: absolute;
+    right: 0;
+}
+.block-social-icon-four.active{
+    fill: #DD4053;
+    transform: rotate(180deg);
+}
+.block-text-four{
+    display: none;
+    border-bottom: 1px #D0D0D0 solid;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 26px;
+    padding-bottom: 30px;
+}
+.block-text-four.active{
+    display: block;
+    border-bottom: 1px #D0D0D0 solid;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 26px;
+    padding-bottom: 30px;
+}
+.number-four{
+    margin-left: 30px;
+    margin-right: 40px;
+    padding: 6px 6px;
+    background-color: #D0D0D0;
+}
+.number-four.active{
+    background-color: #DD4053;
+}
 
 
 /* footer */
