--- a/avia/css/avia.css
+++ b/avia/css/avia.css
@@ -25,6 +25,10 @@ body{
 a{
     text-decoration: none;
 }
+li{
+    display: inline;
+    list-style-type: none;  
+}
 .heder-line{
 width: 100%;
 height: 1px;
@@ -244,6 +248,21 @@ align-items: center;
     cursor: pointer;
     margin-right: 26px;
 }
+.block-title::before {
+    content: counter(num) '.';
+    counter-increment: num;
+    display: inline-block;
+    position: absolute;
+    top: 30px;
+    left: -20px;
+    width: 20px;
+}
+.block-item.active .block-title::before {
+    color: #ef6780;
+    top: 15px;
+    left: -20px;
+    width: 20px;
+}
 .block-title{
     position: relative;
     display: flex;
@@ -308,6 +327,21 @@ align-items: center;
     cursor: pointer;
     margin-right: 26px;
 }
+.block-title-two::before {
+    content: counter(num) '.';
+    counter-increment: num;
+    display: inline-block;
+    position: absolute;
+    top: 30px;
+    left: -20px;
+    width: 20px;
+}
+.block-item-two.active .block-title-two::before {
+    color: #ef6780;
+    top: 15px;
+    left: -20px;
+    width: 20px;
+}
 .block-title-two{
     position: relative;
     display: flex;
@@ -367,6 +401,21 @@ align-items: center;
 .block-item-three{
     cursor: pointer;
     margin-right: 26px;
+}
+.block-title-three::before {
+    content: counter(num) '.';
+    counter-increment: num;
+    display: inline-block;
+    position: absolute;
+    top: 30px;
+    left: -20px;
+    width: 20px;
+}
+.block-item-three.active .block-title-three::before {
+    color: #ef6780;
+    top: 15px;
+    left: -20px;
+    width: 20px;
 }
 .block-title-three{
     position: relative;
