--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,10 @@ body{
 a{
     text-decoration: none;
 }
+li{
+    display: inline;
+    list-style-type: none;  
+}
 .heder-line{
     width: 100%;
     height: 1px;
@@ -802,4 +806,141 @@ margin-top: 18px;
     color: #DD4053;
     border-bottom: 1px #DD4053 solid;
 }
+.inform__title{
+    height: 116px;
+}
 
+
+/* footer */
+.footer{
+    margin-top: 90px;
+    width: 100%;
+    height: 260px;
+    background-color: #F8F8F8;
+    position: absolute;
+}
+.footer-infomatin{
+    width: 1170px;
+    height: 191px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px #C4C4C4 solid;
+}
+.sub-footer-infomatin{
+    width: 1170px;
+    height: 68px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    
+}
+.footer-logo{
+    width: 156px;
+    height: 86px;
+    margin-top: 64px;
+    background-image: url(../img/footer/logo.png);
+    background-blend-mode: darken;
+}
+.footer-contact{
+    width: 724px;
+    height: 91px;
+    margin-top: 60px;
+    display: flex;
+    justify-content: space-between;
+}
+.contact-left{
+    display: flex;
+    flex-direction: column;
+}
+.contact-left li{
+    display: inline;
+    list-style-type: none;
+
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 19px;
+}
+.contact-left li a{
+    color: #3E3E3E;
+}
+.contact-right{
+    display: flex;
+    flex-direction: column;
+}
+.contact-right li{
+    display: inline;
+    list-style-type: none;
+
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 19px;
+}   
+.contact-right li a{
+    color: #3E3E3E;
+}
+.work-mode h3{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 16px;
+    color: #3E3E3E;
+    opacity: 0.5;
+}
+.work-mode p{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 19px;
+}
+.all-contacts{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+.all-contacts a{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 19px;
+    color: #3E3E3E;
+}
+.all-contacts h3{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 16px;
+    color: #3E3E3E;
+    opacity: 0.5;
+
+    position: absolute;
+    bottom: 0;
+}
+.sub-footer-infomatin{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.sub-footer-infomatin p{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 18px;
+    color: rgba(62, 62, 62, 0.5);
+}
+.footer-social-list{
+    height: 72px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100px;
+}
+.footer-social-list li{
+    display: inline;
+    list-style-type: none;  
+}
+.footer-social-list li svg{
+    fill: rgba(62, 62, 62, 0.5);;
+}
